<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:id="@+id/screen_input"
        android:background="@color/tvcolor1"
        android:textSize="50sp"
        android:gravity="right|bottom"
        android:layout_height="300dp"
        tools:ignore="RtlHardcoded">

        </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="0dp"
            android:id="@+id/seven"
            android:text="@string/_7"
            android:onClick="digit"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/eight"
            android:onClick="digit"
            android:text="@string/_8"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/nine"
            android:onClick="digit"
            android:text="@string/_9"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:onClick="operator"
            android:text="@string/divide"
            android:id="@+id/divide"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:id="@+id/four"
            android:text="@string/_4"
            android:onClick="digit"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/five"
            android:onClick="digit"
            android:text="@string/_5"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/six"
            android:onClick="digit"
            android:text="@string/_6"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:onClick="operator"
            android:text="@string/multiply"
            android:id="@+id/multiply"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:id="@+id/one"
            android:text="@string/_1"
            android:onClick="digit"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/two"
            android:onClick="digit"
            android:text="@string/_2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/three"
            android:onClick="digit"
            android:text="@string/_3"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:onClick="operator"
            android:text="@string/subtract"
            android:id="@+id/subtract"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:id="@+id/zero"
            android:text="@string/_0"
            android:onClick="digit"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/dot"
            android:text="@string/dot"
            android:onClick="decimal"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/clr"
            android:onClick="clear"
            android:text="@string/clr"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>
        <Button
            android:layout_width="0dp"
            android:id="@+id/addition"
            android:onClick="operator"
            android:text="@string/addition"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml">

        </Button>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:id="@+id/equal"
            android:text="@string/equal"
            android:onClick="equal"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml">

        </Button>





    </LinearLayout>





</LinearLayout>